--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
   "private": true,
   "license": "UNLICENSED",
   "prisma": {
-    "schema": "db/schema.prisma"
+    "schema": "db/schema.prisma",
+    "seed": "ts-node db/seed.ts"
   },
   "scripts": {
+    "db:dev:rm": "docker compose rm dev-db -s -f -v",
+    "db:dev:up": "docker compose up dev-db -d",
+    "db:dev:restart": "yarn db:dev:rm && yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy && yarn prisma db seed",
+    "prisma:dev:deploy": "prisma migrate deploy",
+    "db:auto_test:rm": "docker compose rm auto-test-db -s -f -v",
+    "db:auto_test:up": "docker compose up auto-test-db -d",
+    "db:auto_test:restart": "yarn db:auto_test:rm && yarn db:auto_test:up && sleep 1 && yarn prisma:auto_test:deploy",
+    "prisma:auto_test:deploy": "dotenv -e .env.auto_test prisma migrate deploy",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -21,7 +30,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "pretest:e2e": "yarn db:auto_test:restart",
+    "test:e2e": "dotenv -e .env.auto_test -- jest --watch --no-caches --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -29,18 +39,18 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.0.5",
+    "@prisma/client": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "@prisma/client": "^4.1.0",
+    "dotenv-cli": "^6.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "prisma": "^4.2.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.0.9",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
@@ -52,6 +62,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.2",
     "prettier": "^2.3.2",
+    "prisma": "^4.2.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
